centered start button
Centeted the start button below grid(forgot to add padding)

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
       <div id="mole8" class="mole"></div>
     </div>
   </div>
-  <button id="start">Start Game</button> <!-- Start button -->
+  <div class="button-container">
+    <button id="start">Start Game</button> <!-- Start button -->
+  </div>
+  
   <script src="./src/index.js"></script>
 </body>
 </html>
